openshift/l1-pod-embedded.yaml
apiVersion: v1
kind: Pod
metadata:
  name: l1-integrated
  namespace: l1-app-ai
  labels:
    app: l1-integrated
spec:
  containers:
    - name: l1-integrated
      image: 10.0.1.224:5000/l1-integrated:latest
      imagePullPolicy: Always
      ports:
        - name: webapp
          containerPort: 5000
          protocol: TCP
      livenessProbe:
        httpGet:
          path: /
          port: 5000
        initialDelaySeconds: 120
        periodSeconds: 30
        timeoutSeconds: 10
        failureThreshold: 3
      readinessProbe:
        httpGet:
          path: /
          port: 5000
        initialDelaySeconds: 30
        periodSeconds: 10
        timeoutSeconds: 5
        failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: l1-integrated-service
  namespace: l1-app-ai
spec:
  selector:
    app: l1-integrated
  ports:
    - name: webapp
      port: 5000
      targetPort: 5000
      nodePort: 30500
      protocol: TCP
  type: NodePort
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: l1-integrated-route
  namespace: l1-app-ai
spec:
  to:
    kind: Service
    name: l1-integrated-service
  port:
    targetPort: webapp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
